--- a/API/API.csproj
+++ b/API/API.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\EstructurasDeDatos\EstructurasDeDatos.csproj">
+    <ProjectReference Include="..\..\EstructurasDeDatos\EstructurasDeDatos.csproj">
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
   </ItemGroup>
